fixed footer spacing

--- a/css/sections/projects.css
+++ b/css/sections/projects.css
@@ -130,3 +130,7 @@
 	font-weight: 400;
 	margin-top: 1rem;
 }
+
+.footer-projects {
+	margin-top: 0;
+}
